# trafficserver

./: CMakeLists.txt  Dockerfile  Makefile  configure.ac  docker-entrypoint.sh  my-configure  my-install
cmake/: ExperimentalPlugins.cmake  Findabsl.cmake  Findcurl.cmake  Findopentelemetry.cmake  Findprotobuf.cmake  Findupb.cmake  Findutf8.cmake  hardening.cmake
configs/: Makefile
configs/body_factory/: Makefile
doc/: Makefile
doc/ext/: local-config.py  traffic-server.py
doc/uml/: Makefile  Makefile.am
example/: Makefile
include/: Makefile  ink_autoconf.h
include/api/: InkAPIInternal.h
include/cripts/: Lulu.hpp
include/proxy/: ParentSelection.h  PoolableSession.h
include/records/: RecCore.h  RecDefs.h
include/ts/: Makefile  apidefs.h  ts.h
include/tscore/: Allocator.h  CryptoHash.h  List.h  MatcherUtils.h  ink_align.h  ink_config.h  ink_memory.h  ink_queue.h  ink_resolver.h
include/tsutil/: Histogram.h
iocore/: Makefile
iocore/aio/: Makefile
iocore/cache/: Cache.cc  CacheDir.cc  CacheDisk.cc  CacheHosting.cc  CacheRead.cc  CacheVol.cc  CacheWrite.cc  I_Cache.h  I_CacheDefs.h  I_Store.h  Makefile  P_CacheDir.h  P_CacheDisk.h  P_CacheHosting.h  P_CacheHttp.h  P_CacheInternal.h  P_CacheVol.h  Store.cc
iocore/dns/: Makefile
iocore/eventsystem/: I_IOBuffer.h  Makefile  P_IOBuffer.h
iocore/hostdb/: HostDB.cc  I_HostDBProcessor.h  Makefile  P_HostDBProcessor.h
iocore/net/: Makefile  UnixConnection.cc
iocore/utils/: Makefile
lib/: Makefile
lib/perl/: Makefile
lib/records/: Makefile
lib/ts/: apidefs.h.in  ink_inet.cc  ink_inet.h
lib/tsconfig/: Makefile
mgmt/: Makefile  RecordsConfig.cc
mgmt/api/: Makefile
mgmt/utils/: Makefile
plugins/: Makefile
plugins/experimental/: CMakeLists.txt
plugins/experimental/wasm/: CMakeLists.txt
plugins/header_rewrite/: operators.cc
plugins/healthchecks/: healthchecks.c
plugins/lua/: ts_lua.c  ts_lua_client_request.cc  ts_lua_coroutine.c  ts_lua_fetch.c  ts_lua_http.c  ts_lua_http.cc  ts_lua_http_intercept.c  ts_lua_misc.c  ts_lua_transform.c  ts_lua_util.c
plugins/stats_over_http/: stats_over_http.cc
proxy/: CacheControl.h  InkAPI.cc  InkAPITest.cc  Makefile  ProtocolProbeSessionAccept.cc  Transform.cc
proxy/hdrs/: HTTP.h  HdrToken.cc  MIME.cc  MIME.h  Makefile
proxy/http/: Http1ClientSession.cc  Http1ServerSession.cc  HttpConfig.cc  HttpConfig.h  HttpSM.cc  (+8 more)
rc/: Makefile  trafficserver  trafficserver.conf  trafficserver.service  trafficserver.xml
src/: Makefile
tests/: autest.sh.in
tools/: Makefile  trafficserver.pc  tsxs
(+944 files in other folders)
